fix mobile blankslate spacing

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -405,3 +405,9 @@ hr {
     display: none;
   }
 }
+
+.blankslate.spacious {
+  @media (max-width: 34em) {
+    padding: 1rem 0;
+  }
+}
